--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,10 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "edumsg.edumsg_android_app"
-        minSdkVersion 15
+        minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -17,22 +17,35 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     //    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
-    compile 'com.beardedhen:androidbootstrap:2.0.1'
-    compile 'com.android.support:support-v4:23.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.yqritc:recyclerview-flexibledivider:1.2.9'
-//    compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile(
             [group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.7.1'],
-//            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.7.1'],
-//            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.1']
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.7.1'],
+            [group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.7.1']
     )
     compile project(':volley')
+    compile 'com.android.support:design:23.2.0'
+    compile 'com.beardedhen:androidbootstrap:2.0.1'
+    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.yqritc:recyclerview-flexibledivider:1.2.9'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'net.steamcrafted:load-toast:1.0.10'
+//    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+//    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
+//    compile 'com.squareup.okio:okio:1.6.0'
 }
