--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,12 @@ android {
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "edumsg.edumsg_android_app"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true
     }
     buildTypes {
         release {
@@ -41,12 +43,16 @@ dependencies {
     //    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 //    compile 'com.squareup.okhttp3:okhttp-urlconnection:3.2.0'
 //    compile 'com.squareup.okio:okio:1.6.0'
-    compile 'com.android.support:design:23.2.0'
+    compile 'com.android.support:design:23.3.0'
     compile 'com.beardedhen:androidbootstrap:2.0.1'
-    compile 'com.android.support:support-v4:23.2.0'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.yqritc:recyclerview-flexibledivider:1.2.9'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'net.steamcrafted:load-toast:1.0.10'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.daimajia.easing:library:1.0.0@aar'
+    compile 'com.daimajia.androidanimations:library:1.1.2@aar'
+    compile 'com.daimajia.androidviewhover:library:1.0.4@aar'
 }
